; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/components/disassembler/extr_dmresrcl.c_AcpiDmDwordDescriptor.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/components/disassembler/extr_dmresrcl.c_AcpiDmDwordDescriptor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i32 }

@ACPI_RESOURCE_TYPE_ADDRESS32 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c")\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AcpiDmDwordDescriptor(i32* %0, %struct.TYPE_8__* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_8__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store %struct.TYPE_8__* %1, %struct.TYPE_8__** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %10 = load i32, i32* @ACPI_RESOURCE_TYPE_ADDRESS32, align 4
  %11 = load i32, i32* %8, align 4
  %12 = call i32 @AcpiDmAddressCommon(%struct.TYPE_8__* %9, i32 %10, i32 %11)
  %13 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %14, i32 0, i32 0
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @AcpiDmAddressFields(i32* %15, i32 32, i32 %16)
  %18 = load i32, i32* %8, align 4
  %19 = add nsw i32 %18, 1
  %20 = call i32 @AcpiDmIndent(i32 %19)
  %21 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %22 = load i32, i32* %7, align 4
  %23 = call i32 @AcpiDmResourceSource(%struct.TYPE_8__* %21, i32 4, i32 %22)
  %24 = call i32 (...) @AcpiDmDescriptorName()
  %25 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %26 = call i32 @AcpiDmAddressFlags(%struct.TYPE_8__* %25)
  %27 = call i32 @AcpiOsPrintf(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @AcpiDmAddressCommon(%struct.TYPE_8__*, i32, i32) #1

declare dso_local i32 @AcpiDmAddressFields(i32*, i32, i32) #1

declare dso_local i32 @AcpiDmIndent(i32) #1

declare dso_local i32 @AcpiDmResourceSource(%struct.TYPE_8__*, i32, i32) #1

declare dso_local i32 @AcpiDmDescriptorName(...) #1

declare dso_local i32 @AcpiDmAddressFlags(%struct.TYPE_8__*) #1

declare dso_local i32 @AcpiOsPrintf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
